--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,3 @@
 
 [web]
-20.162.224.29 ansible_user=azureuser ansible_ssh_private_key_file=~/.ssh/id_rsa
+20.162.224.29 ansible_user=azureuser ansible_ssh_private_key_file=~/#path
